# OS

./: README.md
01/: README.md  game.sh
02/: README.md  main.c
03/: CMakeLists.txt  README.md  main.c
03/tests/: 1.txt  2.txt  binary
04/: .gitignore  CMakeLists.txt  README.md  client.c  server.c
05/: CMakeLists.txt  README.md  config.txt  main.c
06/: CMakeLists.txt  README.md  auth.txt  main.c
